give loading indicators height to avoid big layout shift

--- a/public/index.css
+++ b/public/index.css
@@ -764,6 +764,10 @@ video {
   height: 100vh;
 }
 
+.min-h-\[47rem\] {
+  min-height: 47rem;
+}
+
 .min-h-screen {
   min-height: 100vh;
 }
